# miniprojects

./: .gitignore  5-server.c  README.md
bongaa-laji/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
bongaa-laji/public/: index.html
bongaa-laji/server/: index.js
bongaa-laji/src/: BongaaApp.tsx  index.tsx  styled.d.ts  types.ts
computer-graphics/: README.md
cycle-traffic-prediction/: cyclists_vs_temperature.csv  cyclists_vs_temperature.ods  main.py  report.odt
dmx-notebook/: README.md  package-lock.json  package.json  pom.xml
fighters/: README.md  fighters.c  fighters.h  intro-ASCII.txt  testfight
fingrid-data/: Cargo.toml  babu.json  babuPrice.json  babutrans.json  data.csv  db.sqlite  fin.csv  install  kunnat.json  power-state.json  trans.json  tuuli-maakunnat.csv  tuuli-mittaus-kalajoki.csv  tuuli-mittaus-kristiinankaupunki.csv  tuuli-mittaus-vaasa.csv  tuuli-mittaus.csv  tuulivoimalat.csv  wrangle.js  wranglefin.js  wranglekunta.js  wrangletrans.js  wrangletuuli.js
fingrid-data/src/: constants.rs  error.rs  main.rs
haluatko-teekkariksi/: README.md  package-lock.json  package.json
hidden-sudoku/: README.md  Sudoku.py  SudokuSolver.py  hints.txt  make_puzzles.sh  puzzles_validated.txt  scrape.py
hoxhunt_challenge/: countCriminals.js  package-lock.json  package.json
lactobacillus/: 9637.nlogo  README.md  bacteria.nlogo
libnet/: GitScraper.py  LibraryNetwork.py  README.md  libnet.py  libnet_visualizer.py  requirements.txt
lmariAI/: README.md
rex-gen23/: .gitignore  ChannelControl.py  README.md  main.py
(+118 files in other folders)
