[package]
name = "fingrid-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
phf = { version = "0.11.2", features = ["macros"] }
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
